# slay-the-spire

./: .gitignore  AGENT_RULES.md  DESIGN.md  PROJECT_OVERVIEW.md  README.md  RESEARCH.md  STATUS.md  TASKS.md  VERIFICATION.md
simulator/: Cargo.toml  README.md  pyproject.toml
simulator/crates/py_sts/: Cargo.toml
simulator/crates/sts_core/: Cargo.toml
simulator/crates/sts_verify/: Cargo.toml
simulator/docs/: combat_autopilot_iterations.md  combat_policy_iteration.md  content_support_matrix.md  data_manifest.md  fair_action_schema.md  guided_auto_collection.md  m32a_cards_matrix.md  m32a_relic_potion_matrix.md  m32a_run_world_matrix.md  omniscient_python_ui_design.md  omniscient_python_ui_design.md.comments.json  rl_python_api_design.md  rl_visibility_matrix.md  rl_visibility_matrix.md.comments.json  search_lab.md  self_play.md  sts_lightspeed_audit.md
simulator/docs/audit/: ironclad_card_definition_audit.md  ironclad_monster_audit.md  relic_definition_audit.md  status_definition_audit.md
simulator/python/sts/: __init__.py  bridge.py  bridge_audit.py  guided_collect.py  guided_collector.py  guided_selection.py  omni.py  parity.py  search.py  search_lab.py  self_play.py  slaythedata_index.py  slaythedata_policy.py  trace_replay.py  ui_service.py
simulator/python/tests/: test_bridge_mirror.py  test_guided_collect.py  test_guided_collector.py  test_omni_smoke.py  test_parity.py  test_run_omni_smoke.py  test_search_lab.py  test_search_smoke.py  test_self_play.py  test_slaythedata_index.py  test_slaythedata_policy.py  test_trace_replay.py  test_ui_service.py
(+165 files in other folders)
