[package]
name = "py_sts"
version = "0.1.0"
edition = "2021"

[lib]
name = "sts_omni"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = "1.0"
serde_json = "1.0"
sts_core = { path = "../sts_core" }
sts_verify = { path = "../sts_verify" }
